- fix max-width - align-items center

--- a/src/client/styles/app/app.scss
+++ b/src/client/styles/app/app.scss
@@ -13,7 +13,7 @@ body {
 }
 
 .container-fluid {
-  max-width: 960px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 0 15px;
   @media (max-width: $screen-xs) {
